--- a/FirstWebMVC/Views/Home/Index.cshtml
+++ b/FirstWebMVC/Views/Home/Index.cshtml
@@ -1,15 +1,20 @@
-﻿@{
+﻿@model FirstWebMVC.ViewModels.HomeViewModel
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Sell it now</h1>
     <hr/>
-</div>
-<div class="card" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    </div>
+    @foreach (var product in Model.Products)
+    {
+        <div class="card" style="width: 18rem;">
+            <img src="@product.Image" class="card-img-top" alt="purse-picture">
+            <div class="card-body">
+                <h5 class="card-title">@product.Title</h5>
+                <div>@($"{product.Price:C}")</div>
+                <div>Lacina,FL</div>
+            </div>
+        </div>    
+    }
 </div>
